# JustBot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  bot.py  docker-compose.yml  example.env  main.py  pyproject.toml  requirements.txt  settings.py
bot/: Dockerfile  __init__.py  example.env  just_bot.py  main.py  pyproject.toml  settings.py
bot/cogs/: __init__.py  jokes.py  music_player.py
bot/db/: __init__.py  config.py
bot/db/repos/: base.py
bot/db/repos/guild_info/: repo.py
bot/models/: tg.py
bot/utils/: demotivator_creator.py  frog.py  telegram_handler.py
bot/utils/singleton/: __init__.py
bot/utils/web_scrapers/: __init__.py  base_scraper.py  jokes_scraper.py
cogs/: jokes.py  music_player.py
db/: base.py  config.py  init_db.py  tables.py
db/repos/: __init__.py  base.py
db/repos/guild_info/: __init__.py  model.py  repo.py
interfaces/: __init__.py  web_scraper.py
models/: __init__.py  frog.py  guild_music_info.py  images.py  tg.py
models/db/: base.py  guild_info.py
schemas/: create_tables.sql
utils/: __init__.py  demotivator_creator.py  frog.py  telegram_handler.py  tg_scraper.py
web_scrapers/: __init__.py  base_scraper.py  demotivator_creator.py  jokes_scraper.py  tg_scraper.py
