[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
disnake = {extras = ["voice"], version = "^2.9.1"}
requests = "^2.31.0"
aiohttp = "^3.9.3"
bs4 = "^0.0.2"
html5lib = "^1.1"
uvloop = "^0.19.0"
cachetools = "^5.3.3"
telethon = "^1.34.0"
aiofiles = "^23.2.1"
aiocache = "^0.12.2"
pynacl = "^1.5.0"
yt-dlp = "^2024.3.10"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main"
