[tool.poetry]
name = "justbot"
version = "0.1.0"
description = "Discord bot with unique functions"
authors = ["fookashi <darezzzlol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
disnake = {extras = ["voice"], version = "^2.9.2"}
pydantic = "^2.7.2"
motor = "^3.4.0"
pydantic-settings = "^2.2.1"
aiocache = "^0.12.2"
telethon = "^1.35.0"
bs4 = "^0.0.2"
html5lib = "^1.1"
yt-dlp = "^2024.5.27"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
