[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocache>=0.12.3",
    "aiofiles>=24.1.0",
    "bs4>=0.0.2",
    "disnake>=2.10.1",
    "fake-useragent>=2.2.0",
    "html5lib>=1.1",
    "motor>=3.7.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pynacl>=1.5.0",
    "pytz>=2025.2",
    "taskipy>=1.14.1",
    "telethon>=1.40.0",
    "yt-dlp>=2025.3.31",
]
